--- a/_output.yml
+++ b/_output.yml
@@ -9,12 +9,12 @@ bookdown::gitbook:
       collapse: section
       scroll_highlight: yes
       before: |
-        <li><a href="./">Oski Bear</a></li>
+        <li><a href="./">Daniel Kent</a></li>
       after: |
-        <li><a href="https://github.com/oskibear" target="blank">GitHub</a></li>
-        <li><a href="https://www.ischool.berkeley.edu/people/oski-bear" target="blank">UC Berkeley</a></li>
-        <li><a href="https://www.linkedin.com/in/oskibear/" target="blank">LinkedIn</a></li>
-        <li><a href="https://www.wired.com/2013/02/friendster-autopsy/" target="blank">Friendster</a></li>        
+        <li><a href="https://github.com/rrdkent" target="blank">GitHub</a></li>
+        <li><a href="https://www.ischool.berkeley.edu/people/daniel-kent" target="blank">UC Berkeley Page </a></li>
+        <li><a href="https://www.linkedin.com/in/danielkent/" target="blank">LinkedIn</a></li>
+        <li><a href="https://www.Jobwell.co" target="blank">Jobwell.co</a></li>        
     sharing:
       facebook: no
       twitter: no
@@ -23,5 +23,5 @@ bookdown::gitbook:
       instapper: no
       vk: no
       all: no
-    edit: https://github.com/w201rdada/portfolio-MYGITHUBUSER/edit/master/%s
+    edit: https://github.com/w201rdada/portfolio-rrdkent/edit/master/%s
     download: null
